--- a/_layouts/default-backup.html
+++ b/_layouts/default-backup.html
@@ -306,16 +306,7 @@
             Contributed to a diverse set of projects as Research Engineer at <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a> at 
             National University of Science and University.
             <ul>
-              <li align="justify">Developed setup for Software in the Loop (SITL) simulation for flight controller tuning. Integrated the x-Plane flight simulator with the flight controller
-               firmware. Based on aeronatical-design, developed models of vertical take off and fixed wing ariel vehicles for the simulator.
-              </li>
-              <li align="justify">Carried out end to end development of vertical take off and fixed wing ariel
-                vehicles, from preliminary design (aeronautics calculations), detail design (detailed CAD assemblies) to the export of manufacturing plans. 
-                Optimized design, aerodynamics and structural components by conducting CFD, FEA, FSI
-                simulations.</li>
-              <li align="justify">Provided guidance and mentorship to undergraduate interns to support project development.</li>
-
-              <!--li align="justify">Created conceptual and preliminary design (aeronautics calculations) for
+              <li align="justify">Created conceptual and preliminary design (aeronautics calculations) for
                 fixed-wing UAVs and VTOL.</li>
               <li align="justify">Co-Led detail design activity to create CAD models in SolidWorks and
                 exporting of manufacturing plans. Optimized aerodynamics and structural
@@ -326,7 +317,7 @@
               <li align="justify">Created setup for SITL (software in the loop) simulation by integrating x-plane
                 flight simulator environment with mission planner (PX4) firmware, for
                 tuning controller of fixed wing UAVs.</li>
-              </ul-->
+              </ul>
           </p>
           <!--p>Control Group:
               <ul> 
@@ -373,7 +364,7 @@
           <p align="justify">
             Assisted research activities in Mechanical Department of NED University under the supervision of <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin</a>            
               <ul>
-                  <li align="justify">Conducted a comparative study to numerically assess different RANS turbulence models for prediction of the secondary peak in Nusselt number resulting from
+                  <li align="justify">Conducted a comparative study to assess different RANS turbulence models for prediction of the secondary peak in Nusselt number resulting from
                     a hydraulic jump in jet impingement cooling.</li>
                   <li align="justify">Extensively reviewed literature and conducted numerical simulations related to impinging jets focusing on the influence of different types of fins,
                     surface topology, pulsating/synthetic jets, and nanofluids on heat transfer
