--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -254,16 +254,17 @@
             <p align="justify">
               Contributed as a student research assistant (HiWi) towards the <a href="https://intrepid-project.eu/">Intriped-Project</a>  at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.
                 <ul>
-                    <li align="justify">Assisted deployment of mapping system on GO1 quadruped-robot. Streamline the process for calibrating, synchronizing, communicating, and  data recording from the sensors.</li>
-                    <li align="justify">Implemented various ROS libraries for lidar-based localization and map-
-                      ping. Dockerized and configured the libraries for seamless use within the
-                      mapping system for indoor and outdoor environment.</li>
-                    <li align="justify">Improved localization module by adding functionality of initial alignment
-                      with existing map. Benchmarked localization and mapping performance
-                      of different slam packages.</li>
-                    <li align="justify">Enhanced 2D BIM-to-SLAM simulation code to incorporate support for3D environments with
-                      Gazebo. Also creating a light-weight Blender based
-                      lidar simulation module.</li>
+                  <li align="justify">Proposed and implemented methodology for robust, real-time control of material 
+                    flow in additive manufacturing for construction using an RGB camera.
+                    Successfully deployed this solution on a scaled-down setup based on UR10 robot.</li>
+                  <li align="justify">Developed a lightweight Blender-based LiDAR simulation tool tailored for large
+                    3D building models. The tool automatically plans paths based on the 3D model
+                    and exports LiDAR scans according to configured specifications. Additionally, enhanced the existing 2D BIM-to-SLAM simulation module for 3D environ-
+                    ments by incorporating support for Gazebo.</li>
+                  <li align="justify">Collaborated in the development of mapping system based on GO1 quadruped
+                    robot. Streamlined process for sensor calibration, synchronization, communication, and data recording. Dockerized and configured open-sourced ROS-based
+                    SLAM libraries for seamless use in indoor and outdoor environments.</li>
+
                 </ul>
                 <div style="text-align: center;">
                   <img src="images/robot_walk_6.gif" alt="go1" style="width:75%; height:150px; border-radius: 5%; border: 2px solid #555"> 
@@ -313,40 +314,9 @@
                 vehicles, from preliminary design (aeronautics calculations), detail design (detailed CAD assemblies) to the export of manufacturing plans. 
                 Optimized design, aerodynamics and structural components by conducting CFD, FEA, FSI
                 simulations.</li>
-              <li align="justify">Provided guidance and mentorship to undergraduate interns to support project development.</li>
-
-              <!--li align="justify">Created conceptual and preliminary design (aeronautics calculations) for
-                fixed-wing UAVs and VTOL.</li>
-              <li align="justify">Co-Led detail design activity to create CAD models in SolidWorks and
-                exporting of manufacturing plans. Optimized aerodynamics and structural
-                components by conducting CFD, FEA, FSI simulations using ANSYS.</li>
-              <li align="justify">Design propulsion system and testbench for DLE-120 and engine.</li>
-              <li align="justify">Created model for VTOL (vertical take off and landing) and fixed-wing
-                aerial vehicle for x-plane flight simulator.</li>
-              <li align="justify">Created setup for SITL (software in the loop) simulation by integrating x-plane
-                flight simulator environment with mission planner (PX4) firmware, for
-                tuning controller of fixed wing UAVs.</li>
-              </ul-->
+              <li align="justify">Provided guidance and mentorship to undergraduate interns to support project development.</li>    
           </p>
-          <!--p>Control Group:
-              <ul> 
-                  <li align="justify">Created model for VTOL, fixed-wing UAVs in x-plane flight simulator.</li>
-                  <li align="justify">Conducted SITL (software in the loop) simulation by integrating x-plane flight simulator environment with mission 
-                    planner (PX4) firmware, for tuning controller of fixed wing UAVs.</li>
-              </ul>
-          </p>
-          <p>Design Group:
-            <ul> 
-                <li align="justify">Created conceptual and preliminary design (aeronautics calculations) for fixed-wing UAVs and VTOL. </li>
-                <li align="justify">Led detail design activity to create CAD assembly in SolidWorks and exporting of manufacturing plans. Optimized aerodynamics and structural components by conducting CFD, FEA, FSI simulations using ANSYS.</li>
-                <li align="justify">Design test bench and propulsion system for DLE-120 engine.</li>
-            </ul>
-        </p>
-        <p>Material Testing Group:
-          <ul> 
-              <li align="justify">Conducted numeric simulation (ANSYS ACP), destructive and non-destructive (ultrasonic) testing of different composite samples with different composite layup schemes. </li>
-              <li align="justify">Collaborated in preparation of coursework and conducted lab sessions on calibrating and sizing defects through PAUT (phased array ultrasonic testing) using Omni scan MX8. </li>
-          </ul-->
+          
           <div class="row">
             <div class="column">
               <div style="text-align: center;">
