--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -249,9 +249,11 @@
             <br>
             <papertitle style="color:gray"><big>Research Assistant </big></papertitle><papertitle><big>- Chair of Computational Modeling and Simulation</big></papertitle>
             <br>
-            Jul 2022 - Apr 2023
+            Apr 2022 - Apr 2023
             <br>
             <p align="justify">
+              Contributed to the <a href="https://intrepid-project.eu/">Intriped Project</a> as a student research assistant and the 
+              <a href="https://amc-trr277.de/">Additive Manufacturing Project</a> as part of software practicum at the Chair of Computational Modeling and Simulation.
               Contributed as a student research assistant (HiWi) towards the <a href="https://intrepid-project.eu/">Intriped-Project</a>  at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.
                 <ul>
                   <li align="justify">Proposed and implemented methodology for robust, real-time control of material 
