--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -205,17 +205,16 @@
         <!--br>
         <papertitle style="color:gray"><big>Masters Thesis Student </big></papertitle><papertitle><big>- Intelligent Clound Technologies Lab</big></papertitle>
         <br>
-        Oct 2023 - Present
+        Oct 2023 - Mar 2024
         <br>
         <p align="justify">
           Working as a research intern at the <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a> on the area of life-long mapping and localization.            
             <ul>
-                <li align="justify">ncorporated multiple functionalities (pose graph optimization, hierarchical bun-
-                  dle adjustment ...) to improved performance of lidar based life long localization
-                  and mapping module.</li>
-                <li align="justify">Extensively reviewed literature to study recent trends and potential research
-                  directions in the area of 3D perception.</li>
-                <li align="justify">Develop basic prototype for open vocabulary 3D object detection.</li>
+                <li align="justify">Proposed methodology for scalable and incremental association of features from
+                  2D vision language models to 3D space, enabling context-based localization of instances in 3D space with 
+                  open-vocabulary queries.</li>
+                <li align="justify">Conducting ablation studies to evaluate object localization performance, 
+                  and researching methodologies to handle complex queries with large language models.</li>
             </ul>
         </p-->
 
@@ -225,13 +224,14 @@
         May 2023 - Mar 2024
         <br>
         <p align="justify">
-          Contributed as robotics research intern at the on the area of 3D perception at <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a>.         
+          Contributed as a Robotics Research Intern at <a href="https://huawei.eu/">Huawei's Intelligent Cloud Technologies Lab</a>, with a focus on the area of 3D perception.
+         
             <!--ul>
-                <li align="justify">Incorporated multiple functionalities (pose graph optimization, hierarchical bundle adjustment ...) to improved performance of lidar based life long localization
-                  and mapping module.</li>
-                <li align="justify">Extensively reviewed literature to study recent trends and potential research
-                  directions in the area of 3D perception.</li>
-                <li align="justify">Develop basic prototype for open vocabulary 3D object detection.</li>
+                <li align="justify">Researched methods for improving LiDAR-based localization and mapping, incorporating multiple functionalities based on research 
+                  (adaptive parameterization, hierarchical bundle adjustment, pose graph optimization, etc.) to improvethe performance of LiDAR-based lifelong localization and mapping modules</li>
+                <li align="justify">Conducted an extensive literature review to identify recent trends and potential
+                research directions in 3D perception and spatial computing.</li>
+                <li align="justify"> Developed a proof-of-concept system for open-vocabulary 3D object detection.</li>
             </ul-->
         </p>
     </td>
