--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,16 +74,16 @@
             <td style="padding:2.5%;width:60%;vertical-align:middle">
             
               <br>
-              <p align="justify">Hi!, you can call me Rafay. I work with mathematical models, convert them to code to solve problems in engineering.
-              </p>
+              <p align="justify">Hi!, I'm Rafay 👋: </p> 
+              <p align="justify">I work with mathematical models, convert them to code to solve problems in engineering. </p>
           
-              <p align="justify">I am also a Master's student majoring in Computational Mechanics, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
-                part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. Currently I am working  on my masters thesis in the area on 'Open World Spatial Reasoning' at <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a>, 
-                before this I was working as a Research Intern mainly focusing on lidar based life long localization and mapping. Prior to that, during my masters I worked as a student research assistant at the 
+              <p align="justify">I am Master's student majoring in Computational Mechanics, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
+                part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. Currently I am working  on my masters thesis 'Open World Spatial Reasoning' at <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a>, 
+                before this I was working as a Robotics Research Intern mainly focusing on lidar based life long localization and mapping. Prior to that, during my masters I worked as a student research assistant at the 
                 <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on methods for 3D scanning 
                 and mapping along with their implementation using different robotics systems.
               </p>
-              <p align="justify">
+              <!--p align="justify">
                 From Jul-2020 to Oct-2021, I worked at the <a href="https://nust.edu.pk/">National University of Science and Technology</a>, 
                 as part of the <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a>. I primarily worked on the design and development of drones 
                 (fixed wing and vertical take of and landing aerial vehicles) for urban environments. 
@@ -95,7 +95,7 @@
                 <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin</a>, where I numerically investigated different techniques 
                 for heat transfer enhancement through jet impingement. <a href="https://doi.org/10.1002/htj.21986">[1]</a>, 
                 <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a>.
-              </p>
+              </p-->
               <p style="text-align:center">
                 <a href="mailto:rafaymohiuddin7@gmail.com" target="_blank">Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/rafaymhddn">GitHub</a> &nbsp;/&nbsp;
