--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,8 +74,8 @@
             <td style="padding:2.5%;width:60%;vertical-align:middle">
             
               <br>
-              <p align="justify">Hi!, I'm Rafay 👋: </p> 
-              <p align="justify">I work with mathematical models, convert them to code to solve problems in engineering. </p>
+              <p align="justify">Hi 👋, I'm Rafay!. I work with mathematical models, convert them to code to solve problems in engineering and science.  </p> 
+
           
               <p align="justify">I am Master's student majoring in Computational Mechanics, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
                 part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. Currently I am working  on my masters thesis 'Open World Spatial Reasoning' at <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a>, 
