--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -213,8 +213,8 @@
                 <li align="justify">Proposed methodology for scalable and incremental association of features from
                   2D vision language models to 3D space, enabling context-based localization of instances in 3D space with 
                   open-vocabulary queries.</li>
-                <li align="justify">Conducting ablation studies to evaluate object localization performance, 
-                  and researching methodologies to handle complex queries with large language models.</li>
+                <!--li align="justify">Conducting ablation studies to evaluate object localization performance, 
+                  and researching methodologies to handle complex queries with large language models.</li-->
             </ul>
         </p>
 
