--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -256,7 +256,7 @@
               <a href="https://amc-trr277.de/">Additive Manufacturing Project</a> as part of software practicum at the Chair of Computational Modeling and Simulation.
               Contributed as a student research assistant (HiWi) towards the <a href="https://intrepid-project.eu/">Intriped-Project</a>  at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.
                 <ul>
-                  <li align="justify">Proposed and implemented methodology for robust, real-time control of material 
+                  <li align="justify">Proposed methodology for robust, real-time control of material 
                     flow in additive manufacturing for construction using an RGB camera.
                     Successfully deployed this solution on a scaled-down setup based on UR10 robot.</li>
                   <li align="justify">Developed a lightweight Blender-based LiDAR simulation tool tailored for large
