--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,7 @@
             <td style="padding:2.5%;width:60%;vertical-align:middle">
             
               <br>
-              <p align="justify">Hi 👋, I'm Rafay!. I work with mathematical models, convert them to code to solve problems in engineering and science.  </p> 
+              <p align="justify">Hi 👋, I'm Rafay! I work with mathematical models, convert them to code to solve problems in engineering and science.  </p> 
 
           
               <p align="justify">I am Master's student majoring in Computational Mechanics, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
@@ -220,7 +220,7 @@
         <br>
         <papertitle style="color:gray"><big>Research Intern  </big></papertitle><papertitle><big>- Intelligent Clound Technologies Lab</big></papertitle>
         <br>
-        May 2023 - Mar 2024
+        Oct 2023 - Mar 2024
         <br>
         <p align="justify">
           Contributed as a Robotics Research Intern at <a href="https://huawei.eu/">Huawei's Intelligent Cloud Technologies Lab</a>, with a focus on the area of 3D perception.
