--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -227,7 +227,7 @@
          
             <ul>
                 <li align="justify">Researched methods for improving LiDAR-based localization and mapping, incorporating multiple functionalities based on research 
-                  (adaptive parameterization, hierarchical bundle adjustment, pose graph optimization, etc.) to improvethe performance of LiDAR-based lifelong localization and mapping modules</li>
+                  (hierarchical bundle adjustment, pose graph optimization, etc.) to improvethe performance of LiDAR-based lifelong localization and mapping modules</li>
                 <li align="justify">Conducted an extensive literature review to identify recent trends and potential
                 research directions in 3D perception and spatial computing.</li>
                 <li align="justify"> Developed a proof-of-concept system for open-vocabulary 3D object detection.</li>
