--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -207,7 +207,7 @@
         Oct 2023 - Mar 2024
         <br>
         <p align="justify">
-          Working as a research intern at the <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a> on the area of life-long mapping and localization.            
+          Thesis: Zero-Shot Open Vocabulary Reasoning in Open World Scenarios     
             <ul>
                 <li align="justify">Proposed methodology for scalable and incremental association of features from
                   2D vision language models to 3D space, enabling context-based localization of instances in 3D space with 
