--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,7 +100,7 @@
                 <a href="https://github.com/rafaymhddn">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://orcid.org/0000-0003-3926-3679">Orcid</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/rafaymhddn/"> LinkedIn</a> &nbsp;/&nbsp;
-                <a href="https://drive.google.com/file/d/1yDU2B0Zb5tORAkxDbTTZb8VBZem6mLO_/view?usp=drive_link" target="_blank"> CV</a> 
+                <a href="https://drive.google.com/file/d/19KjiDw1hWZ3SkGTB34B4MH4JD5jaUtIT/view?usp=sharing" target="_blank"> CV</a> 
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
