--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -209,11 +209,11 @@
         <p align="justify">
           Thesis: Zero-Shot Open Vocabulary Reasoning in Open World Scenarios     
             <ul>
-                <li align="justify">Proposed methodology for scalable and incremental association of features from
-                  2D vision language models to 3D space, enabling context-based localization of instances in 3D space with 
-                  open-vocabulary queries.</li>
-                <!--li align="justify">Conducting ablation studies to evaluate object localization performance, 
-                  and researching methodologies to handle complex queries with large language models.</li-->
+                <li align="justify">Proposed and implimented method for scalable and incremental association of features from
+                  2D vision language models to 3D space, enabling context-based localization of
+                  instances in 3D space with open-vocabulary queries.</li>
+                <li align="justify">Conducting ablation studies to evaluate object localization performance, 
+                  and researching methodologies to handle complex queries with large language models.</li>
             </ul>
         </p>
 
