--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -133,7 +133,7 @@
             Oct 2021 - Mar 2024
             <br>
             <p align="justify">
-              <b>Thesis:</b> Zero-Shot Open Vocabulary Reasoning in Open World Scenarios* (<a href="https://huawei.eu/">Huawei</a>, <a href="https://www.cee.ed.tum.de/cms/home/">TUM</a>) <br>
+              <b>Thesis:</b> Zero-Shot Open World 3D Spatial Reasoning* (<a href="https://huawei.eu/">Huawei</a>, <a href="https://www.cee.ed.tum.de/cms/home/">TUM</a>) <br>
                 <!--ul>
                     <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
                     <br>                               
@@ -207,7 +207,7 @@
         Oct 2023 - Mar 2024
         <br>
         <p align="justify">
-          Thesis: Zero-Shot Open Vocabulary Reasoning in Open World Scenarios     
+          Thesis: Zero-Shot Open World 3D Spatial Reasoning.     
             <ul>
                 <li align="justify">Proposed and implimented method for scalable and incremental association of features from
                   2D vision language models to 3D space, enabling context-based localization of
