--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
 
           
               <p align="justify">I am Master's student majoring in Computational Mechanics, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
-                part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. Currently I am working  on my masters thesis 'Open World Spatial Reasoning' at <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a>, 
+                part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. Currently I am working  on my masters thesis '3D Spatial Reasoning' at <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a>, 
                 before this I was working as a Robotics Research Intern mainly focusing on life long localization and mapping. Prior to that, during my masters I worked as a student research assistant at the 
                 <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on diverse robotics projects.
               </p>
@@ -133,7 +133,7 @@
             Oct 2021 - Mar 2024
             <br>
             <p align="justify">
-              <b>Thesis:</b> Zero-Shot Open World 3D Spatial Reasoning* (<a href="https://huawei.eu/">Huawei</a>, <a href="https://www.cee.ed.tum.de/cms/home/">TUM</a>) <br>
+              <b>Thesis:</b> 3D Scene Representation for Spatial Reasoning* (<a href="https://huawei.eu/">Huawei</a>, <a href="https://www.cee.ed.tum.de/cms/home/">TUM</a>) <br>
                 <!--ul>
                     <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
                     <br>                               
@@ -207,13 +207,12 @@
         Oct 2023 - Mar 2024
         <br>
         <p align="justify">
-          Thesis: Zero-Shot Open World 3D Spatial Reasoning.     
+          Thesis: 3D Scene Representation for Spatial Reasoning.     
             <ul>
-                <li align="justify">Proposed and implimented method for scalable and incremental association of features from
-                  2D vision language models to 3D space, enabling context-based localization of
-                  instances in 3D space with open-vocabulary queries.</li>
-                <li align="justify">Conducting ablation studies to evaluate object localization performance, 
-                  and researching methodologies to handle complex queries with large language models.</li>
+              <li align="justify">Proposed 3D scene representation for large language models, capable of global reasoning and answering complex spatial queries.</li>
+              <li align="justify">Developed scalable method for constructing 3D scene through incremental association of instance level details from 2D foundation models to 3D space. </li>
+              <li align="justify">Additionally, developed feature fusion scheme based on embedding from vision transformers for context-based localization of instances in 3D space with open-vocabulary queries.</li> 
+              <li align="justify">Currently, working on ablation studies to evaluate object localization and global reasoning performance.</li> 
             </ul>
         </p>
 
