--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -211,7 +211,7 @@
             <ul>
               <li align="justify">Proposed 3D scene representation for large language models, capable of global reasoning and answering complex spatial queries.</li>
               <li align="justify">Developed scalable method for constructing 3D scene through incremental association of instance level details from 2D foundation models to 3D space. </li>
-              <li align="justify">Additionally, developed feature fusion scheme based on embedding from vision transformers for context-based localization of instances in 3D space with open-vocabulary queries.</li> 
+              <li align="justify">Additionally, developed feature fusion scheme based on CLIP embeddings for context-based localization of instances in 3D space with open-vocabulary queries.</li> 
               <li align="justify">Currently, working on ablation studies to evaluate object localization and global reasoning performance.</li> 
             </ul>
         </p>
