--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -209,10 +209,11 @@
         <p align="justify">
           Thesis: 3D Scene Representation for Spatial Reasoning.     
             <ul>
-              <li align="justify">Proposed 3D scene representation for large language models, capable of global reasoning and answering complex spatial queries.</li>
+              
               <li align="justify">Developed scalable method for constructing 3D scene through incremental association of instance level details from 2D foundation models to 3D space. </li>
+              <li align="justify">Proposed prompting strategy for large language models, capable of global reasoning and answering complex spatial queries over constructed 3D scene.</li>
               <li align="justify">Additionally, developed feature fusion scheme based on CLIP embeddings for context-based localization of instances in 3D space with open-vocabulary queries.</li> 
-              <li align="justify">Currently, working on ablation studies to evaluate object localization and global reasoning performance.</li> 
+              <li align="justify">Currently, working on ablation studies to evaluate object recall and reasoning performance.</li> 
             </ul>
         </p>
 
