--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -160,10 +160,10 @@
             <br>
             <papertitle style="color:gray"><big>Masters of Science </big></papertitle><papertitle><big>Computational Mechanics</big></papertitle>
             <br>
-            Oct 2021 - Mar 2024
+            Oct 2021 - Apr 2024
             <br>
             <p align="justify">
-              <b>Thesis:</b> 3D Scene Representation for Spatial Reasoning* (<a href="https://huawei.eu/">Huawei</a>, <a href="https://www.cee.ed.tum.de/cms/home/">TUM</a>) <br>
+              <b>Thesis:</b> Open World 3D Scene Understanding (<a href="https://huawei.eu/">Huawei</a>, <a href="https://www.cee.ed.tum.de/cms/home/">TUM</a>) <br>
                 <!--ul>
                     <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
                     <br>                               
@@ -173,13 +173,12 @@
                 <ul>
                     <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
                     <br>
-                    <li align="justify"><b>Mechanics:</b> Advanced Fluid Mechanics*, AI in Computational Mechanics, Computational Material Modeling I, Computational Material Modeling II, Computational Fluid Dynamics, Continuum Mechanics, Finite Element Methods I  </li>
+                    <li align="justify"><b>Mechanics:</b> Advanced Fluid Mechanics, AI in Computational Mechanics, Computational Material Modeling I, Computational Material Modeling II, Computational Fluid Dynamics, Continuum Mechanics, Finite Element Methods I  </li>
                     <br>
                     <!--li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab, Software Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Scientific Visualization,  Numerical Optimization (Robot Design and Control), Advanced Deep Learning in Physics.  </li> 
                     <br>
                     <li align="justify"><b>Mechanics:</b> Computational Material Modeling I & II, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics, Computational Material Modeling II, Advanced Fluid Dynamics *   </li>
                     <br-->
-                    (* in progress)
                     
                 </ul>
             </p>
@@ -234,16 +233,16 @@
         <br>
         <papertitle style="color:gray"><big>Masters Thesis Student </big></papertitle><papertitle><big>- Intelligent Clound Technologies Lab</big></papertitle>
         <br>
-        Oct 2023 - Mar 2024
+        Oct 2023 - Apr 2024
         <br>
         <p align="justify">
-          Thesis: 3D Scene Representation for Spatial Reasoning.     
+          Conducted research in the area of zero shot approches for “Open World 3D Scene Understanding” utilizing foundation and large language models; co-supervised by Huawei-ICTL and TUM-CMS (Grade: 1.0/1.0).  
             <ul>
               
               <li align="justify">Developed scalable method for constructing 3D scene through incremental association of instance level details from 2D foundation models to 3D space. </li>
-              <li align="justify">Proposed prompting strategy for large language models, capable of global reasoning and answering complex spatial queries over constructed 3D scene.</li>
-              <li align="justify">Additionally, developed feature fusion scheme based on CLIP embeddings for context-based localization of instances in 3D space with open-vocabulary queries.</li> 
-              <li align="justify">Currently, working on ablation studies to evaluate object recall and reasoning performance.</li> 
+              <li align="justify">Developed feature fusion scheme based on CLIP embeddings for context-based localization of instances in 3D space with open-vocabulary queries. Quantitative and qualitative performance exceeds current state of the art.</li> 
+              <li align="justify">Additionally, conducted explorative study and demonstrated global automatic labeling and spatial reasoning over 3D scene, using large language modes.</li>
+              <li align="justify">Currently, working on research paper based on findings.</li> 
             </ul>
         </p>
 
